<resources>
    <string name="app_name">ResuMate</string>
    <string name="testText">Enter Text:</string>
    <string name="ViewF">View Text</string>
    <string name="SelectF">Pick File</string>
    <string name="submit">Submit</string>
    <string name="Login">Login</string>
    <string name="SignUp">SignUp</string>
    <string name="uname">UserName</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginPrompt">Please Login Below</string>
    <string name="ResuMate">ResuMate</string>
    <string name="logout">Logout</string>
    <string name="skillIcon">SkillIcon</string>
    <string name="webpageLink">Paste Webpage Link to Compare Resume with Job</string>
    <string name ="compare">Compare with Resume</string>
    <string name ="comparison_complete_message">Your resume has been compared with the webpage you linked.</string>
    <string name ="done">Done</string>
    <string name="add_skill">Add Skill</string>
    <string name="rem_skill">Remove Selected</string>
    <string name="enter_skill">Enter Skill</string>
    <string name="v_skills">Edit Skills</string>
    <string name="capture_res">Capture Resume</string>
    <string name="analysis">Save Skills From Resume</string>
    <string name="edit">Edit</string>
    <string name = "results_message">The matching skills are:</string>
    <string name="save_job">Save Job</string>
    <string name="resumate_logo">ResuMate logo</string>
</resources>
