<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linearLayout2"
    android:background="@color/backgroundBlue">

    <TextView
        android:id="@+id/ocrTextView"
        android:layout_width="330dp"
        android:layout_height="531dp"
        android:scrollbars="vertical"
        android:textAlignment="viewStart"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"
        tools:layout_conversion_absoluteHeight="236dp"
        tools:layout_conversion_absoluteWidth="362dp" />

    <Button
        android:id="@+id/choose_button"
        android:layout_width="114dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="64dp"
        android:text="@string/capture_res"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ocr_button"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ocrTextView"
        app:layout_constraintVertical_bias="0.157"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/view_button"
        android:layout_width="118dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="4dp"
        android:text="@string/v_skills"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.647"
        app:layout_constraintStart_toEndOf="@+id/ocr_button"
        app:layout_constraintTop_toBottomOf="@+id/ocrTextView"
        app:layout_constraintVertical_bias="0.136"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:textAllCaps="false"/>

    <EditText
        android:id="@+id/webpage_link"
        android:layout_width="400dp"
        android:layout_height="75dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="400dp"
        android:hint="@string/webpageLink"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/compare_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:background="@drawable/button_background"
        android:text="@string/compare"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/webpage_link"
        app:layout_constraintTop_toTopOf="@+id/webpage_link" />

    <Button
        android:id="@+id/ocr_button"
        android:layout_width="117dp"
        android:layout_height="50dp"
        android:text="@string/analysis"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ocrTextView"
        app:layout_constraintVertical_bias="0.837"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:textAllCaps="false"/>

    <LinearLayout
        android:layout_width="433dp"
        android:layout_height="88dp"
        android:background="@color/buttonBottomBlue"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoView"
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/resumate_logo" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background_logout"
        android:text="@string/logout"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@+id/logoView"
        app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <ImageView
        android:id="@+id/bgImage"
        android:layout_width="296dp"
        android:layout_height="277dp"
        android:layout_marginLeft="56dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/webpage_link"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/ic_resume" />


</androidx.constraintlayout.widget.ConstraintLayout>